add rarity on weeklywakka detector, lombok